// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> Spinner should render the Spinner component properly with custom lable: Spinner-custom-label 1`] = `
<div>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        __MOCK__LABEL__
      </span>
    </div>
  </div>
</div>
`;

exports[`components >> Spinner should render the Spinner component properly: Spinner-default 1`] = `
<div>
  <div
    class="flex items-center justify-center"
  >
    <div
      class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
